--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,32 @@ services:
       - "9092:9092"
     environment:
       KAFKA_ADVERTISED_HOST_NAME: 192.168.99.100
-      KAFKA_ADVERTISED_PORT: 9092
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPICS: "greetings:2:3"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  kafka-2:
+    build: ./kafka
+    ports:
+      - "9093:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: 192.168.99.100
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPICS: "greetings:2:3"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  kafka-3:
+    build: ./kafka
+    ports:
+      - "9094:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: 192.168.99.100
+      KAFKA_BROKER_ID: 3
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPICS: "greetings:2:3"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
